--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
                 <!--Portfolio item 01-->
                 <div class="portfolio">
                     <div class="portfolio--item">
-                        <img src="img/google.png" alt="" class="portfolio--img">
+                        <img src="img/myshop.png" alt="" class="portfolio--img">
                         <div class="portfolio--description">
-                            <span class="portfolio--description---title">Search</span>
-                            <span class="portfolio--description---detail">HTML -  SASS</span>                  
+                            <span class="portfolio--description---title">MyBoxingShop</span>
+                            <span class="portfolio--description---detail">React.js - Redux - Django - Django REST Framework - React-Bootstrap</span>                  
                             <div class="d">
-                                <a class="btn" href="https://ammarcode.github.io/search-CS50-project0/index.html" target="_blank">Live</a> <span class="btn-pipe">|</span>
-                                <a class="btn" href="https://github.com/AmmarCode/search-CS50-project0" target="_blank"><i class="fab fa-github"></i></a>
+                                <!-- <a class="btn" href="https://ammarcode.github.io/search-CS50-project0/index.html" target="_blank">Live</a> <span class="btn-pipe">|</span> -->
+                                <a class="btn" href="https://github.com/AmmarCode/myShop" target="_blank"><i class="fab fa-github"></i></a>
                             </div>
                         </div>                        
                     </div>                                        
