--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         <img src="img/myshop.png" alt="" class="portfolio--img">
                         <div class="portfolio--description">
                             <span class="portfolio--description---title">MyBoxingShop</span>
-                            <span class="portfolio--description---detail">React.js - Redux - Django - Django REST Framework - React-Bootstrap</span>                  
+                            <span class="portfolio--description---detail">React.js - Redux - Django REST Framework - React-Bootstrap</span>                  
                             <div class="d">
                                 <!-- <a class="btn" href="https://ammarcode.github.io/search-CS50-project0/index.html" target="_blank">Live</a> <span class="btn-pipe">|</span> -->
                                 <a class="btn" href="https://github.com/AmmarCode/myShop" target="_blank"><i class="fab fa-github"></i></a>
