--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     <div class="portfolio--item">
                         <img src="img/FEM3.png" alt="" class="portfolio--img">
                         <div class="portfolio--description">
-                            <span class="portfolio--description---title">Tetimonial Grid Section</span>
+                            <span class="portfolio--description---title">Testimonial Grid Section</span>
                             <span class="portfolio--description---detail">HTML - CSS</span>                  
                             <div class="d">
                                 <a class="btn" href="https://ammarcode.github.io/testimonials-grid-section/" target="_blank">Live</a> <span class="btn-pipe">|</span>
