--- a/index.html
+++ b/index.html
@@ -98,15 +98,15 @@
     <h3 class="section-title--skills" id="skills">Skills</h3>
     <section class="skills">
         <div class="skills--imgs">
-            <img src="img/python.png" class="skill--img" data-aos="fade-up">
-            <img src="img/django.png" class="skill--img" data-aos="fade-down">
-            <img src="img/postgresql.png" class="skill--img" data-aos="fade-up">
-            <img src="img/javascript.png" class="skill--img" data-aos="fade-down">
-            <img src="img/react.png" class="skill--img" data-aos="fade-up">
-            <img src="img/html5.png" class="skill--img" data-aos="fade-down">
-            <img src="img/css3.png" class="skill--img" data-aos="fade-up">
-            <img src="img/git.png" class="skill--img" data-aos="fade-down">
-            <img src="img/github.png" class="skill--img" data-aos="fade-up">
+            <img src="img/html5.png" class="skill--img" data-aos="fade-right">
+            <img src="img/css3.png" class="skill--img" data-aos="fade-right">
+            <img src="img/javascript.png" class="skill--img" data-aos="fade-right">
+            <img src="img/react.png" class="skill--img" data-aos="fade-left">
+            <img src="img/python.png" class="skill--img" data-aos="fade-left">
+            <img src="img/django.png" class="skill--img" data-aos="fade-left">
+            <img src="img/postgresql.png" class="skill--img" data-aos="fade-right">
+            <img src="img/git.png" class="skill--img" data-aos="fade-right">
+            <img src="img/github.png" class="skill--img" data-aos="fade-right">
         </div>
     </section>
 
@@ -134,22 +134,39 @@
             <!--Portfolio item 02-->
             <div class="portfolio">
                 <div class="portfolio--item">
-                    <img src="img/FEM4.png" alt="" class="portfolio--img">
+                    <img src="img/FEM8.png" alt="" class="portfolio--img">
                     <div class="portfolio--description">
                         <span class="portfolio--description---title">To do App</span>
-                        <span class="portfolio--description---detail">React.js - CSS</span>
+                        <span class="portfolio--description---detail">React.js - React Hooks - React Router - Tailwind
+                            CSS</span>
                         <div class="d">
                             <a class="btn"
-                                href="https://ammarcode.github.io/todo-app/"
+                                href="https://github.com/AmmarCode/rest-countries-api-with-color-theme-switcher"
                                 target="_blank">Live</a> <span class="btn-pipe">|</span>
                             <a class="btn"
-                                href="https://github.com/AmmarCode/todo-app"
+                                href="https://ammarcode.github.io/rest-countries-api-with-color-theme-switcher"
                                 target="_blank"><i class="fab fa-github"></i></a>
                         </div>0
                     </div>
                 </div>
             </div>
             <!--Portfolio item 03-->
+            <div class="portfolio">
+                <div class="portfolio--item">
+                    <img src="img/FEM4.png" alt="" class="portfolio--img">
+                    <div class="portfolio--description">
+                        <span class="portfolio--description---title">To do App</span>
+                        <span class="portfolio--description---detail">React.js - CSS</span>
+                        <div class="d">
+                            <a class="btn" href="https://ammarcode.github.io/todo-app/" target="_blank">Live</a> <span
+                                class="btn-pipe">|</span>
+                            <a class="btn" href="https://github.com/AmmarCode/todo-app" target="_blank"><i
+                                    class="fab fa-github"></i></a>
+                        </div>0
+                    </div>
+                </div>
+            </div>
+            <!--Portfolio item 04-->
             <div class="portfolio">
                 <div class="portfolio--item">
                     <img src="img/FEM5.png" alt="" class="portfolio--img">
@@ -165,7 +182,7 @@
                     </div>
                 </div>
             </div>
-            <!--Portfolio item 04-->
+            <!--Portfolio item 05-->
             <div class="portfolio">
                 <div class="portfolio--item">
                     <img src="img/commerce.png" alt="" class="portfolio--img">
@@ -182,7 +199,7 @@
                     </div>
                 </div>
             </div>
-            <!--Portfolio item 05-->
+            <!--Portfolio item 06-->
             <div class="portfolio">
                 <div class="portfolio--item">
                     <img src="img/mail.png" alt="" class="portfolio--img">
@@ -192,23 +209,6 @@
                             Bootstrap</span>
                         <div class="d">
                             <a class="btn" href="https://github.com/AmmarCode/mail-CS50-project3" target="_blank"><i
-                                    class="fab fa-github"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!--Portfolio item 06-->
-           <div c lass="portfolio">
-                <div class="portfolio--item">
-                    <img src="img/face-detector.png" alt="" class="portfolio--img">
-                    <div class="portfolio--description">
-                        <span class="portfolio--description---title">Face-Detector</span>
-                        <span class="portfolio--description---detail">React.js - Node.js - PostgreSQL - REST API - CSS -
-                            Tachyons</span>
-                        <div class="d">
-                            <a class="btn" href="https://ammarcode.github.io/faceRecognition/" target="_blank">Live</a>
-                            <span class="btn-pipe">|</span>
-                            <a class="btn" href="https://github.com/AmmarCode/faceRecognition" target="_blank"><i
                                     class="fab fa-github"></i></a>
                         </div>
                     </div>
