--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <div class="portfolio--item">
                     <img src="img/FEM8.png" alt="" class="portfolio--img">
                     <div class="portfolio--description">
-                        <span class="portfolio--description---title">To do App</span>
+                        <span class="portfolio--description---title">REST Countries API with color theme switcher</span>
                         <span class="portfolio--description---detail">React.js - React Hooks - React Router - Tailwind
                             CSS</span>
                         <div class="d">
