--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
                             CSS</span>
                         <div class="d">
                             <a class="btn"                            
-                                href="https://ammarcode.github.io/rest-countries-api-with-color-theme-switcher"
+                                href="https://rest-countries-api-fe.netlify.app/"
                                 target="_blank">Live</a> <span class="btn-pipe">|</span>
                             <a class="btn"
-                                href="https://github.com/AmmarCode/rest-countries-api-with-color-theme-switcher"
+                                href="https://github.com/AmmarCode/rest-countries-api"
                                 target="_blank"><i class="fab fa-github"></i></a>
                         </div>0
                     </div>
