Update content and styles

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <header>
+    <header id="home">
 
         <button class="nav-toggle" aria-label="toggle navigation">
             <span class="hamburger"></span>
@@ -38,7 +38,7 @@
         </nav>
 
         <!--Introduction-->
-        <section class="intro" id="home">
+        <section class="intro">
             <h1 class="section-title--intro">
                 Hello, I am <strong>Ammar Jalabi</strong>
             </h1>
@@ -83,12 +83,17 @@
         <section class="about">
             <div class="section-body--about" data-aos="fade-up">
                 <p>
-                    Welcome to my portfolio website! I'm a Mixed martial artist turned Full-Stack Software Developer.
-                    I taught myself Software Development by taking multiple self-paced programming courses,
-                    as well as taking advantage of the tons of free resources out there!
-                </p>
-                <p>
-                    I'm really excited to put my hard-earned skills to work. Building dynamic responsive Software.
+                    Welcome to my portfolio website! I'm a Mixed martial artist turned Software Engineer. A professional
+                    with great
+                    communication skills combined with fluency in several languages (Arabic, English, Mandarin and
+                    Turkish). <br> <br> A
+                    strong problem-solver with attention to details. Proficient in both Fronend and Backend Development,
+                    currently more
+                    focused on Frontend. <br> <br> Experienced in utilizing a wide variety of technologies including
+                    HTML, CSS, Vanilla
+                    JavaScript, React.js, Tailwindcss, Bootstrap, Node.js, Express, Python, Django, PostgreSQL, Git,
+                    Github, Postman... and
+                    more.
                 </p>
             </div>
         </section>
@@ -117,15 +122,16 @@
             <!--Portfolio item 01-->
             <div class="portfolio">
                 <div class="portfolio--item">
-                    <img src="img/myshop.png" alt="" class="portfolio--img">
+                    <img src="img/media-web-app.png" alt="" class="portfolio--img">
                     <div class="portfolio--description">
-                        <span class="portfolio--description---title">MyBoxingShop</span>
-                        <span class="portfolio--description---detail">React.js - Redux - Django REST Framework -
-                            React-Bootstrap</span>
+                        <span class="portfolio--description---title">Media Web App</span>
+                        <span class="portfolio--description---detail">React.js - React Hooks - React Router - Tailwind
+                            CSS
+                        </span>
                         <div class="d">
-                            <a class="btn" href="https://myboxingshop.herokuapp.com/#/" target="_blank">Live</a> <span
-                                class="btn-pipe">|</span>
-                            <a class="btn" href="https://github.com/AmmarCode/myShop" target="_blank"><i
+                            <a class="btn" href="https://media-web-app.netlify.app/" target="_blank">Live</a>
+                            <span class="btn-pipe">|</span>
+                            <a class="btn" href="https://github.com/AmmarCode/entertainment-web-app" target="_blank"><i
                                     class="fab fa-github"></i></a>
                         </div>
                     </div>
@@ -136,16 +142,14 @@
                 <div class="portfolio--item">
                     <img src="img/FEM8.png" alt="" class="portfolio--img">
                     <div class="portfolio--description">
-                        <span class="portfolio--description---title">REST Countries API with color theme switcher</span>
+                        <span class="portfolio--description---title">REST Countries API</span>
                         <span class="portfolio--description---detail">React.js - React Hooks - React Router - Tailwind
                             CSS</span>
                         <div class="d">
-                            <a class="btn"                            
-                                href="https://rest-countries-api-fe.netlify.app/"
-                                target="_blank">Live</a> <span class="btn-pipe">|</span>
-                            <a class="btn"
-                                href="https://github.com/AmmarCode/rest-countries-api"
-                                target="_blank"><i class="fab fa-github"></i></a>
+                            <a class="btn" href="https://rest-countries-api-fe.netlify.app/" target="_blank">Live</a>
+                            <span class="btn-pipe">|</span>
+                            <a class="btn" href="https://github.com/AmmarCode/rest-countries-api" target="_blank"><i
+                                    class="fab fa-github"></i></a>
                         </div>0
                     </div>
                 </div>
@@ -153,62 +157,16 @@
             <!--Portfolio item 03-->
             <div class="portfolio">
                 <div class="portfolio--item">
-                    <img src="img/FEM4.png" alt="" class="portfolio--img">
+                    <img src="img/myshop.png" alt="" class="portfolio--img">
                     <div class="portfolio--description">
-                        <span class="portfolio--description---title">To do App</span>
-                        <span class="portfolio--description---detail">React.js - CSS</span>
+                        <span class="portfolio--description---title">MyBoxingShop</span>
+                        <span class="portfolio--description---detail">React.js - Redux - React-Bootstrap - Python -
+                            Django REST Framework - PostgrSQL
+                        </span>
                         <div class="d">
-                            <a class="btn" href="https://ammarcode.github.io/todo-app/" target="_blank">Live</a> <span
+                            <a class="btn" href="https://myboxingshop.herokuapp.com/#/" target="_blank">Live</a> <span
                                 class="btn-pipe">|</span>
-                            <a class="btn" href="https://github.com/AmmarCode/todo-app" target="_blank"><i
-                                    class="fab fa-github"></i></a>
-                        </div>0
-                    </div>
-                </div>
-            </div>
-            <!--Portfolio item 04-->
-            <div class="portfolio">
-                <div class="portfolio--item">
-                    <img src="img/FEM5.png" alt="" class="portfolio--img">
-                    <div class="portfolio--description">
-                        <span class="portfolio--description---title">E-commerce product page</span>
-                        <span class="portfolio--description---detail">HTML - CSS - Bootstrap - JavaScript</span>
-                        <div class="d">
-                            <a class="btn" href="https://ammarcode.github.io/E-commerce-product-page/"
-                                target="_blank">Live</a> <span class="btn-pipe">|</span>
-                            <a class="btn" href="https://github.com/AmmarCode/E-commerce-product-page"
-                                target="_blank"><i class="fab fa-github"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!--Portfolio item 05-->
-            <div class="portfolio">
-                <div class="portfolio--item">
-                    <img src="img/commerce.png" alt="" class="portfolio--img">
-                    <div class="portfolio--description">
-                        <span class="portfolio--description---title">Commerce</span>
-                        <span class="portfolio--description---detail">Python - Django - SQL - HTML - CSS -
-                            Bootstrap</span>
-                        <div class="d">
-                            <a class="btn" href="https://am-commerce.herokuapp.com/" target="_blank">Live</a> <span
-                                class="btn-pipe">|</span>
-                            <a class="btn" href="https://github.com/AmmarCode/commerce-CS50-project2" target="_blank"><i
-                                    class="fab fa-github"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!--Portfolio item 06-->
-            <div class="portfolio">
-                <div class="portfolio--item">
-                    <img src="img/mail.png" alt="" class="portfolio--img">
-                    <div class="portfolio--description">
-                        <span class="portfolio--description---title">Mail</span>
-                        <span class="portfolio--description---detail">Python - Django - SQL - JavaScript - HTML - CSS -
-                            Bootstrap</span>
-                        <div class="d">
-                            <a class="btn" href="https://github.com/AmmarCode/mail-CS50-project3" target="_blank"><i
+                            <a class="btn" href="https://github.com/AmmarCode/myShop" target="_blank"><i
                                     class="fab fa-github"></i></a>
                         </div>
                     </div>
