--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     <!--Footer-->
     <footer class="footer">
         <section class="contact" id="contact">
-            <h3>Contact Me</h3>
+            <h3 class="contact-title">Contact Me</h3>
         </section>
         <a class="social--link" href="mailto:ammar.code01@gmail.com">
             <i class="far fa-envelope"></i>
