--- a/index.html
+++ b/index.html
@@ -4,16 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale= 1.0">
+    <meta name="description" content="Ammar Jalabi Portfolio.">
     <title>Ammar Jalabi</title>
     <link rel="shortcut icon" type="image/png" href="img/code.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
         integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
-    <link href="https://fonts.googleapis.com/css?family=source+code+pro:400, 900|
-                    Source+Snas+Pro:300, 900&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="css/styles.css">
@@ -42,9 +39,10 @@
             <h1 class="section-title--intro">
                 Hello, I am <strong>Ammar Jalabi</strong>
             </h1>
-            <p class="section-subtitle--intro"><span class="txt-type" data-wait="3000"
-                    data-words='["A Full-Stack Software Developer based in Columbia, South Carolina.", "I Enjoy learning new technologies and developing dynamic Software."]'></span><span
-                    class="cursor">&nbsp;</span></p>
+            <!-- <p class="section-subtitle--intro"><span class="txt-type" data-wait="3000"
+                    data-words='["A Software Engineer based in Columbia, South Carolina."]'></span><span
+                    class="cursor">&nbsp;</span></p> -->
+            <p class="section-subtitle--intro">A Software Engineer based in Columbia, South Carolina.</p>
             <ul class="social-list--intro">
                 <li class="social-list--item---intro">
                     <a class="social-list--link---intro" data-descr="Email me!" href="mailto:ammar.code01@gmail.com">
@@ -77,47 +75,53 @@
     </header>
 
     <!--About-->
-    <h3 class="section-title--about" id="about">About Me</h3>
-    <section class="flex">
-        <img src="img/Ammar2.png" alt="Ammar's pic" class="about--img" data-aos="fade-right">
-        <section class="about">
-            <div class="section-body--about" data-aos="fade-up">
-                <p>
-                    Welcome to my portfolio website! I'm a Mixed martial artist turned Software Engineer. A professional
-                    with great
-                    communication skills combined with fluency in several languages (Arabic, English, Mandarin and
-                    Turkish). <br> <br> A
-                    strong problem-solver with attention to details. Proficient in both Fronend and Backend Development,
-                    currently more
-                    focused on Frontend. <br> <br> Experienced in utilizing a wide variety of technologies including
-                    HTML, CSS, Vanilla
-                    JavaScript, React.js, Tailwindcss, Bootstrap, Node.js, Express, Python, Django, PostgreSQL, Git,
-                    Github, Postman... and
-                    more.
-                </p>
+    <section class="about-container" id="about">
+        <h2 class="section-title--about">About Me</h2>
+        <section class="flex">
+            <img src="img/Ammar2.png" alt="Ammar's pic" class="about--img" data-aos="fade-right">
+            <section class="about">
+                <div class="section-body--about" data-aos="fade-up">
+                    <p>
+                        Passinate Software Engineer, strong problem-solver with attention to details. Proficient in both
+                        Fronend and Backend Development,
+                        currently more focused on Frontend.
+                        <br>
+                        Possess great communication skills combined with fluency in several languages (Arabic, English,
+                        Mandarin and
+                        Turkish).<br>Experienced in utilizing a wide variety of technologies including
+                        HTML, CSS, Vanilla
+                        JavaScript, React.js, Tailwindcss, Bootstrap, Node.js, Express, Python, Django, PostgreSQL, Git,
+                        Github, Postman... and
+                        more.
+                    </p>
+                </div>
+            </section>
+        </section>
+    </section>
+
+
+    <!--Skills-->
+    <section class="skills-container" id="skills">
+        <h2 class="section-title--skills">Skills</h2>
+        <section class="skills">
+            <div class="skills--imgs">
+                <img src="img/html5.png" class="skill--img" alt="skill-icon" data-aos="fade-right">
+                <img src="img/css3.png" class="skill--img" alt="skill-icon" data-aos="fade-right">
+                <img src="img/javascript.png" class="skill--img" alt="skill-icon" data-aos="fade-right">
+                <img src="img/react.png" class="skill--img" alt="skill-icon" data-aos="fade-left">
+                <img src="img/python.png" class="skill--img" alt="skill-icon" data-aos="fade-left">
+                <img src="img/django.png" class="skill--img" alt="skill-icon" data-aos="fade-left">
+                <img src="img/postgresql.png" class="skill--img" alt="skill-icon" data-aos="fade-up">
+                <img src="img/git.png" class="skill--img" alt="skill-icon" data-aos="fade-up">
+                <img src="img/github.png" class="skill--img" alt="skill-icon" data-aos="fade-up">
             </div>
         </section>
     </section>
 
-    <!--Skills-->
-    <h3 class="section-title--skills" id="skills">Skills</h3>
-    <section class="skills">
-        <div class="skills--imgs">
-            <img src="img/html5.png" class="skill--img" data-aos="fade-right">
-            <img src="img/css3.png" class="skill--img" data-aos="fade-right">
-            <img src="img/javascript.png" class="skill--img" data-aos="fade-right">
-            <img src="img/react.png" class="skill--img" data-aos="fade-left">
-            <img src="img/python.png" class="skill--img" data-aos="fade-left">
-            <img src="img/django.png" class="skill--img" data-aos="fade-left">
-            <img src="img/postgresql.png" class="skill--img" data-aos="fade-right">
-            <img src="img/git.png" class="skill--img" data-aos="fade-right">
-            <img src="img/github.png" class="skill--img" data-aos="fade-right">
-        </div>
-    </section>
 
     <!--Projects-->
-    <section class="projects" id="projects">
-        <h3 class="section-title--projects">Projects</h3>
+    <section class="projects-container" id="projects">
+        <h2 class="section-title--projects">Projects</h2>
         <section class="portfolio">
             <!--Portfolio item 01-->
             <div class="portfolio">
@@ -177,9 +181,9 @@
 
 
     <!--Footer-->
-    <footer class="footer">
-        <section class="contact" id="contact">
-            <h3 class="contact-title">Contact Me</h3>
+    <footer class="footer" id="contact">
+        <section class="contact">
+            <h2 class="contact-title">Contact Me</h2>
         </section>
         <a class="social--link" href="mailto:ammar.code01@gmail.com">
             <i class="far fa-envelope"></i>
